--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Menu</title>
-	<script src="https://raw.githubusercontent.com/moment/moment/develop/moment.js">
+	<script src="moment.js">
 
 	</script>
 	<style type="text/css">
