--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html>
 <head>
 	<style type="text/css">
+		@font-face {
+    		font-family: ffMenu;
+    		src: url(font/Final_Fantasy_VII.woff);
+		}
+
+
 		body{
 			background-color: black;
+			font-family: ffMenu;
 		}
 	</style>
 	<title>Paul Crossley</title>
 </head>
 <body>
-
+	<div id="start" style="color: white; position: absolute; top: 40%; right: 35%; font-size: 128px;">PRESS START TO BEGIN</div>
 </body>
 </html>
