--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 	<title>Paul Crossley</title>
 </head>
 <body>
-	<div id="start" style="color: white; position: absolute; top: 40%; right: 35%; font-size: 128px;">PRESS START TO BEGIN</div>
+	<a href="menu.html"> <div id="start" style="color: white; position: absolute; top: 40%; right: 35%; font-size: 128px;">PRESS START TO BEGIN</div> </a>
 </body>
 </html>
