--- a/menu.html
+++ b/menu.html
@@ -210,8 +210,8 @@
 				document.getElementById("age").innerHTML = "LV"
 				document.getElementById("ageval").style = "position: absolute; top: 10%; right: 60%; font-size: 62px;"
 				document.getElementById("ageval").innerHTML = a;
-				document.getElementById('content').style = "position: absolute; top: 40%; width: 90%; height: 50%; right: 6%; overflow-y: scroll;"
-				document.getElementById('content').innerHTML = "This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content This is content "
+				document.getElementById('content').style = "line-height: 70%; position: absolute; top: 45%; width: 90%; height: 50%; right: 6%; overflow-y: scroll;"
+				document.getElementById('content').innerHTML = "<br/> Well met! <br/> <br/> I'm Paul, a fresh computer science graduate looking for work or projects in either Games or Software Development, ideally on creative projects. </br></br> I work primary in C# and java (a full list of languages and my fluency in them can be found in the skills section.) and have experience using the Unity engine to create video games and simulations, as can be seen in the portfolio section of this website. <br/> <br/> I enjoy most areas of programming but artificial intelligence (including machine learning and deep learning) and augmented/virtual reality technologies currently are my favorite areas and would love to work with them in the future."
 			}else{
 				characterPanel.innerHTML = "other";
 			}
