--- a/meme.html
+++ b/meme.html
@@ -44,7 +44,7 @@
 
 	<div style="position: absolute; top: 10%; right: 70%; color: white; font-size: 42px; font-family: Century Gothic;">Plain Text Here!</div>
 	<input id="plaintext" style="position: absolute; top: 20%; right: 45%; width: 50%; height: 10%; font-size: 42px; font-family: Century Gothic;" type="text" name="plaintext" value="my computer science degree sure paid off">
-	<div id="output" style="position: absolute; top: 40%; right: 50%; color: white; font-size: 42px; font-family: Century Gothic;"></div>
+	<div id="output" style="position: absolute; width: 50%; height: 40%; top: 40%; right: 30%; color: white; font-size: 42px; font-family: Century Gothic;"></div>
 	<button onclick="swag()" style="text-align: center;position: absolute;top: 20%; right: 32%; height: 10%; width: 10%;">Have fun</button>
 
 </body>
