--- a/menu.html
+++ b/menu.html
@@ -87,10 +87,10 @@
 		height: 50%;">
 		<ul style="list-style-type: none;">
 			<li><a href="" onclick="setAndChange(0);return false;">About</a></li>
-		  	<li><a href="" onclick="setAndChange(1);return false;">Skills</li>
-		  	<li><a href="" onclick="setAndChange(2);return false;">Portfolio</li>
-		  	<li><a href="" onclick="setAndChange(3);return false;">Contact</li>
-		  	<li><a href="index.html" onclick="">Quit</li>
+		  	<li><a href="" onclick="setAndChange(1);return false;">Skills</a></li>
+		  	<li><a href="" onclick="setAndChange(2);return false;">Portfolio</a></li>
+		  	<li><a href="" onclick="setAndChange(3);return false;">Contact</a></li>
+		  	<li><a href="index.html" onclick="">Quit</a></li>
 		</ul>
 		<div class="cursor" id="cursor">  
 		<img src="cursor.png"></img>
