--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Paul Crossley</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    Hello World
+    <div class="loading-screen">
+        <div class="loading-spinner"></div>
+    </div>
+    <section class="main-content">
+        <h1>We still cooking, please come back later</h1>
+    </section>
+    <div class="attribution">
+        © 2025 Paul Crossley
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
