--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 
                 <div class="project-card">
                     <h2>Hansard at Huddersfield</h2>
-                    <p>Digital humanities project analyzing parliamentary debates through computational methods and natural language processing.</p>
+                    <p>Digital humanities project analyzing parliamentary debates through computational methods and linguistics.</p>
                 </div>
                 
                 <div class="project-card">
