mobile fn + favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paul Crossley</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+    <link rel="shortcut icon" href="favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="favicon/site.webmanifest" />
 </head>
 <body>
     <div class="loading-screen">
@@ -18,8 +23,49 @@
         <div class="avatar">
             <img src="https://avatars.githubusercontent.com/u/29954653" alt="Paul Crossley">
         </div>
+        <h1>Paul Crossley</h1>
+        <div class="mobile-social-wrapper">
+            <button class="mobile-social-toggle" aria-label="Show social links">
+                <i class="fas fa-share-alt"></i> Follow
+            </button>
+            <div class="mobile-social-dropdown">
+                <div class="social-links">
+                    <a href="https://github.com/paulthatjazz" target="_blank" class="social-link">
+                        <i class="fab fa-github"></i>
+                        <span>GitHub</span>
+                    </a>
+                    <a href="https://www.linkedin.com/in/pauljoncrossley/" target="_blank" class="social-link">
+                        <i class="fab fa-linkedin"></i>
+                        <span>LinkedIn</span>
+                    </a>
+                    <a href="https://orcid.org/0000-0002-3587-6067" target="_blank" class="social-link">
+                        <i class="fab fa-orcid"></i>
+                        <span>ORCID</span>
+                    </a>
+                    <a href="https://profiles.sussex.ac.uk/p592943-paul-crossley" target="_blank" class="social-link">
+                        <i class="fas fa-user-graduate"></i>
+                        <span>UoS</span>
+                    </a>
+                    <a href="https://twitter.com/paulthtjazz" target="_blank" class="social-link">
+                        <i class="fab fa-twitter"></i>
+                        <span>Twitter</span>
+                    </a>
+                    <a href="https://bsky.app/profile/paulthatjazz.bsky.social" target="_blank" class="social-link">
+                        <i class="fab fa-bluesky"></i>
+                        <span>Bluesky</span>
+                    </a>
+                    <a href="https://www.instagram.com/paulthatjazz/" target="_blank" class="social-link">
+                        <i class="fab fa-instagram"></i>
+                        <span>Instagram</span>
+                    </a>
+                    <a href="mailto:p.j.crossley@sussex.ac.uk" class="social-link">
+                        <i class="fas fa-envelope"></i>
+                        <span>Email</span>
+                    </a>
+                </div>
+            </div>
+        </div>
         <div class="mobile-header-text">
-            <h1>Paul Crossley</h1>
             <h2>Research Fellow & Software Developer</h2>
         </div>
     </div>
@@ -45,9 +91,25 @@
                         <i class="fab fa-linkedin"></i>
                         <span>LinkedIn</span>
                     </a>
+                    <a href="https://orcid.org/0000-0002-3587-6067" target="_blank" class="social-link">
+                        <i class="fab fa-orcid"></i>
+                        <span>ORCID</span>
+                    </a>
+                    <a href="https://profiles.sussex.ac.uk/p592943-paul-crossley" target="_blank" class="social-link">
+                        <i class="fas fa-user-graduate"></i>
+                        <span>UoS</span>
+                    </a>
                     <a href="https://twitter.com/paulthtjazz" target="_blank" class="social-link">
                         <i class="fab fa-twitter"></i>
                         <span>Twitter</span>
+                    </a>
+                    <a href="https://bsky.app/profile/paulthatjazz.bsky.social" target="_blank" class="social-link">
+                        <i class="fab fa-bluesky"></i>
+                        <span>Bluesky</span>
+                    </a>
+                    <a href="https://www.instagram.com/paulthatjazz/" target="_blank" class="social-link">
+                        <i class="fab fa-instagram"></i>
+                        <span>Instagram</span>
                     </a>
                     <a href="mailto:p.j.crossley@sussex.ac.uk" class="social-link">
                         <i class="fas fa-envelope"></i>
