--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
                 <p>
                     <span class="emoji bounce">💬</span> I'm always happy to consider freelance projects — just drop me an email if you'd like to chat!
                 </p>
+                <p>
+                    <span class="emoji bounce">🤔</span> Fun fact: This website changes based on the time of day.
+                </p>
             </div>
             <div id="projects" class="projects main-content">
                 
