--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <span class="emoji wave">👋</span> Hi, I'm Paul. Nice to meet you!
                 </p>
                 <p>
-                    <span class="emoji bounce">💻</span> I'm a Research Fellow and Software Developer at the <a href="https://wearepal.ai" target="_blank">Predictive Analytics Lab (PAL)</a>, where I’m currently working on the LIMMMA project (Landscapes Integrative Mapping and Modelling for Multifunctional Analysis).
+                    <span class="emoji bounce">💻</span> I'm a Research Fellow and Software Developer at the <a href="https://wearepal.ai" target="_blank">Predictive Analytics Lab (PAL)</a>, where I'm currently working on the LIMMMA project (Landscapes Integrative Mapping and Modelling for Multifunctional Analysis).
                 </p>
                 <p>
                     <span class="emoji bounce">📍</span> I'm based in the North of England living with my wonderful <span style="text-decoration: line-through;">girlfriend</span> fiancée.
@@ -146,7 +146,7 @@
                     <span class="emoji bounce">🧠</span> I'm really passionate about machine learning — and just as curious about the ethical side of AI and technology.
                 </p>
                 <p>
-                    <span class="emoji bounce">🔍</span> I’m planning to start a PhD soon, diving even deeper into how we can build tech that’s both innovative and responsible.
+                    <span class="emoji bounce">🔍</span> I'm planning to start a PhD soon, diving even deeper into how we can build tech that's both innovative and responsible.
                 </p>
                 <p>
                     <span class="emoji bounce">💬</span> I'm always happy to consider freelance projects — just drop me an email if you'd like to chat!
@@ -156,6 +156,10 @@
                 </p>
             </div>
             <div id="projects" class="projects main-content">
+                
+                <div class="search-container">
+                    <input type="text" id="site-search" placeholder="Search..." aria-label="Search site">
+                </div>
                 
                 <div class="project-card">
                     <h2>LIMMMA</h2>
